--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "StoreApp",
+    "name": "StoreIL",
     "slug": "StoreApp",
     "version": "1.0.0",
     "orientation": "portrait",
